# hexxy.media

./: .gitignore  README.md  appspec.yml  cdk.json  cdktf.json  nodemon.json  package-lock.json  pm2.config.js  pyproject.toml
.github/ISSUE_TEMPLATE/: maven-publishing.yml  maven.yml  subdomain.yml
.github/workflows/: build.yml  deploy.yml  hexxybook.yml
aws/scripts/: after-install.sh  application-stop.sh  validate-service.sh
codedeploy/: appspec.yml  pm2.config.js
codedeploy/scripts/: after-install.sh  application-start.sh  application-stop.sh
codedeploy/scripts/aws/: after-install.sh  application-stop.sh  validate-service.sh
codedeploy/scripts/pm2/: api.sh
docs/: CNAME  index.html
docs/meta/: sitemap.json
docs/test/: index.html
docs/v/0.11.1-7/: .sitemap-marker.json  index.html
docs/v/0.11.1-7/zh_cn/: .sitemap-marker.json  index.html
docs/v/latest/: index.html
docs/v/latest/zh_cn/: index.html
docs/zh_cn/: index.html
hexxybook/: .cruft.json  README.md  gradle.properties  nodemon.json  properties.toml  pyproject.toml
hexxybook/.github/workflows/: build_docs.yml
hexxybook/doc/: README.md  properties.toml
hexxybook/doc/src/hexdoc_hexxybook/: _hooks.py
hexxybook/doc/src/hexdoc_hexxybook/_export/resources/assets/hexcasting/lang/: en_us.flatten.json5
hexxybook/resources/assets/hexcasting/lang/: en_us.flatten.json5
src/aws/: app.py  stack.py
src/azure/: main.bicep  main.bicepparam  project.bicep  user.bicep
src/hexdoc_hexxybook/: _hooks.py
src/hexdoc_hexxybook/_templates/components/: welcome.html.jinja
src/hexxy_media/api/: app.py  errors.py
src/hexxy_media/api/db/: engine.py
src/hexxy_media/api/db/model/: pattern.py
src/hexxy_media/api/utils/: lehmer.py
src/hexxy_media/common/: data.py  logging.py  types.py
src/hexxy_media/web/: app.py  jinja.py  sitemap.py
src/hexxy_media/web/templates/: index.html.jinja  index.scss.jinja
src/hexxy_media/web/templates/components/: github_pages.html.jinja  links.html.jinja
src/hexxyapi/: __main__.py  app.py
src/hexxyapi/db/: engine.py  settings.py
src/hexxyapi/db/model/: pattern.py
src/infra/aws_cdk/: app.py  stack.py
src/infra/cdktf/: app.py  stack.py
test/: conftest.py
test/hexxy_media/api/app/: test_lehmer.py
