[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexxy.media"
description = "Monorepo for https://hexxy.media/."
version = "0.1.0"
authors = [
    { name="object-Object" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "pydantic~=2.3,!=2.4.0",
    "pydantic_settings",
    "fastapi~=0.103.1",
    "uvicorn~=0.23.2",
    "sqlmodel @ git+https://github.com/AntonDeMeester/sqlmodel.git@244c94760b69", # nice
    "psycopg2~=2.9",
]
aws = [
    "aws-cdk-lib~=2.102",
    "aws-cdk-github-oidc~=2.4",
]
cloudflare = []
dev = [
    "hexxy.media[api,aws,cloudflare]",
    "black==23.7.0",
    "isort==5.12.0",
    "pytest~=7.3",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/hexxy_media",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/hexxy_media",
]

[tool.hatch.metadata]
allow-direct-references = true # TODO: remove when the SQLModel Pydantic v2 PR is merged

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = [
    "hexxy",
]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

enableExperimentalFeatures = true

typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance =  	"warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportUnknownVariableType = "none"
reportIncompatibleVariableOverride = "none"