[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexxy.media"
description = "Monorepo for https://hexxy.media/."
version = "0.1.0"
authors = [
    { name="object-Object" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = [
    "importlib-resources>=6.1.0",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "libsass>=0.23.0",
]
runtime = [
    "pyyaml<5.4", # fix "AttributeError: cython_sources"
    "pydantic~=2.3,!=2.4.0",
    "pydantic_settings",
    "fastapi~=0.103.1",
    "uvicorn[standard]~=0.23.2",
    "sqlmodel @ git+https://github.com/mbsantiago/sqlmodel.git@3005495a3ec6c8216b31cbd623f91c7bc8ba174f",
    "psycopg2-binary~=2.9",
]
aws-cdk = [
    "aws-cdk-lib==2.102.0",
    "aws-cdk-github-oidc==2.4.0",
]
cdktf = [
    "cdktf==0.21.0",
    "cdktf-cdktf-provider-cloudflare==13.6.0",
]
dev = [
    "hexxy.media[build,runtime,aws-cdk,cdktf]",
    "black==23.7.0",
    "isort==5.12.0",
    "pytest~=7.3",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/hexxy_media",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/hexxy_media",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = [
    "hexxy_media",
]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = [
    "src",
]
exclude = [
    "venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "cdk.out",
    "cdktf.out",
]

enableExperimentalFeatures = true

typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance =  	"warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportUnknownVariableType = "none"
reportIncompatibleVariableOverride = "none"