[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexxy.media"
description = "Monorepo for https://hexxy.media/."
version = "0.1.0"
authors = [
    { name="object-Object" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = [
    "importlib-resources>=6.1.0",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "libsass>=0.23.0",
]
runtime = [
    "pyyaml<5.4", # fix "AttributeError: cython_sources"
    "pydantic~=2.3,!=2.4.0",
    "pydantic_settings",
    "fastapi~=0.103.1",
    "uvicorn[standard]~=0.23.2",
    "sqlmodel @ git+https://github.com/mbsantiago/sqlmodel.git@3005495a3ec6c8216b31cbd623f91c7bc8ba174f",
    "psycopg2-binary~=2.9",
]
aws-cdk = [
    "aws-cdk-lib==2.102.0",
    "aws-cdk-github-oidc==2.4.0",
]
cdktf = [
    "cdktf==0.21.0",
    "cdktf-cdktf-provider-cloudflare==13.6.0",
]
dev = [
    "hexxy.media[build,runtime,aws-cdk,cdktf]",
    "ruff~=0.13.3",
    "pytest~=7.3",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/hexxy_media",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/hexxy_media",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
preview = true
extend-exclude = [
    "**/venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
]

[tool.ruff.lint]
extend-select = [
    "I", # import sorting
    "RUF022", # __all__ sorting
    "TID252", # ban relative imports
]
extend-ignore = [
    # covered by Pyright
    "F821", # undefined variable
    "F401", # imported but unused
    "F841", # unused variable
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "hexxy_media",
]
known-third-party = [
    "aws_cdk",
    "cdktf",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = [
    "src",
]
exclude = [
    "venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "cdk.out",
    "cdktf.out",
]

typeCheckingMode = "standard"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportConstantRedefinition = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"

reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
