[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.9.2",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-hexxybook"
description = "Python web book docgen and hexdoc plugin for the Book of Hexxy."
readme = "README.md"
authors = [{ name="object-Object" }]
keywords = ["hexdoc"]
requires-python = ">=3.11"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://book.hexxy.media/"
Source = "https://github.com/object-Object/hexxy.media/tree/main/doc"

# Gradle version/deps

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "__version__.py"
key = "hexcastingVersion"

[tool.hatch.metadata.hooks.gradle-properties]
dependencies = [
    { package="hexdoc", op="~=", py-version="1.0.dev19", key="hexcastingVersion" },
    "hexdoc-hexal @ https://github.com/object-Object/Hexal/raw/{hexalHash}/docs/v/latest/dist/hexdoc_hexal-{hexalFullVersion}-py3-none-any.whl",
]

# directory inclusion, or lack thereof

[tool.hatch.build]
only-include = []
artifacts = []

[tool.hatch.build.targets.wheel]
sources = []

[tool.hatch.metadata]
allow-direct-references = true

# linting

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"